--- a/web/index.html
+++ b/web/index.html
@@ -37,7 +37,7 @@
       .b2 { width: 640px; height: 640px; background: #C1A6FF; top: -120px; right: -120px; animation-delay: 2.2s; }
       .b3 { width: 460px; height: 460px; background: #A855F7; bottom: -160px; left: 20%; animation-delay: 1.1s; opacity: .28; }
       @keyframes float { 0%,100%{ transform: translateY(0) translateX(0);} 50%{ transform: translateY(22px) translateX(12px);} }
-      .content { position: relative; z-index: 1; text-align: center; max-width: 920px; }
+      .content { position: relative; z-index: 1; text-align: center; max-width: 920px; padding: 0 8px; }
       .logo { width: 64px; height: 64px; margin: 0 auto 14px; border-radius: 16px; background: linear-gradient(135deg, var(--accent), var(--accent-2)); box-shadow: 0 12px 30px rgba(168,85,247,.35); transform: translateZ(0); }
       .title { font-size: clamp(32px, 6vw, 56px); margin: 0 0 8px; letter-spacing: .4px; line-height: 1.05; background: linear-gradient(90deg, #fff, #E5E7EB, #C1A6FF, #A855F7, #E5E7EB); -webkit-background-clip: text; background-clip: text; color: transparent; background-size: 200% auto; animation: shine 9s linear infinite; text-shadow: 0 2px 0 rgba(0,0,0,.25); }
       @keyframes shine { 0%{ background-position: 0% 50%; } 100%{ background-position: 200% 50%; } }
@@ -48,6 +48,10 @@
       @keyframes pulse { 0%,100%{ transform: scale(1); opacity: .9;} 50%{ transform: scale(1.4); opacity: 1; } }
       canvas.fx { position: absolute; inset: 0; z-index: 0; pointer-events: none; opacity: .45; }
       .footer { position: absolute; bottom: 18px; left: 0; right: 0; text-align: center; color: var(--muted); font-size: 12px; z-index: 1; }
+      @media (max-width: 560px){
+        .subtitle{ padding: 0 6px }
+        .cta{ width: 100%; justify-content: center }
+      }
     </style>
   </head>
   <body>
@@ -63,7 +67,7 @@
         <div class="logo"></div>
         <h1 class="title">Postura</h1>
         <p class="subtitle">Move better. Measure better. Turn your workout videos into actionable insights with MediaPipe‑powered form analysis.</p>
-        <a class="cta" href="/ui/app.html"><span class="dot"></span> Open Analyzer</a>
+        <a class="cta" href="/ui/app.html?api=https%3A%2F%2Fpostura-779u.onrender.com"><span class="dot"></span> Open Analyzer</a>
       </div>
       <div class="footer">© <script>document.write(new Date().getFullYear())</script> Ahmed Ali</div>
     </section>
